--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "axios": "^1.3.6",
+    "pinia": "^2.0.34",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^18.15.12",
     "@vitejs/plugin-vue": "^4.1.0",
+    "naive-ui": "^2.34.3",
     "typescript": "^4.9.3",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
   }
