--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.12",
+    "@unocss/preset-uno": "^0.51.6",
     "@vitejs/plugin-vue": "^4.1.0",
     "naive-ui": "^2.34.3",
     "typescript": "^4.9.3",
+    "unocss": "^0.51.6",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
