--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "unocss": "^0.51.6",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
-    "vue-tsc": "^1.2.0"
+    "vite-plugin-checker": "^0.6.0",
+    "vue-tsc": "^1.6.4"
   }
 }
